--- a/appcode/HeriHomes/app/src/main/AndroidManifest.xml
+++ b/appcode/HeriHomes/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PayRentActivity"></activity>
+        <activity android:name=".PaymentScheduleActivity"></activity>
+        <activity android:name=".PayRentActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LandingActivity">
